--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1 class="home-color">
     
-      Welcome to my Homepage
+      Welcome to the Cat World
     </h1>
   <h2>
       This is Varvara's page
